--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 		<title>Lei Shu's homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		-->
 	</head>
 	<body class="is-preload">
 
@@ -16,8 +14,8 @@
 				<div class="inner">
 					<!--<span class="icon major fa-cloud"></span>-->
 					<img class="img-circle" src = "images/emoji.png" alt = "Lei Shu's emoji" />
-					<h1><strong>Lei Shu</strong></h1>
-					<dt>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning, Reinforcement Learning</dt>
+					<h1><b>Lei Shu</b></h1>
+					<dt><b>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning, Reinforcement Learning</b></dt>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
@@ -32,75 +30,76 @@
 				</div>
 			</section>
 
-		<!-- One -->
+		<!-- One
 			<section id="one" class="main style1">
-				<div class="container">	
-					<header>
-						<h3>About Me</h3>
-					</header>
-					<p>I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
-					<!--My research interests are dialogue system, sentiment analysis, and deep learning. -->
-					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. <!--My latest resume is here.--> <p>			
+				<div class="container" >	
+			
 					</div>
 				</div>
 			</section>
-
+ 		-->
 		<!-- Four -->
 			<section id="two" class="main style2">
-				<div class="container">
+				<div class="container" >
 					<header>
-						<h3>Selected Papers (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</h3>
+						<h2>About Me</h2>
 					</header>
-					<ul class ="alt">
+					<p>I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
+					<!--My research interests are dialogue system, sentiment analysis, and deep learning. -->
+					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. <!--My latest resume is here.--> <p>
+					<header>
+						<h3><b>Selected Papers</b> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</h5>
+					</header>
+					<ol >
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
 							</strong><br>
 						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						NAACL 2019 <small>[<a href="https://arxiv.org/abs/1904.02232">arXiv</a>][<a href="https://github.com/howardhsu/BERT-for-RRC-ABSA">code</a>]</small>						
+						<em>NAACL 2019</em> <small>[<a href="https://arxiv.org/abs/1904.02232">arXiv</a>][<a href="https://github.com/howardhsu/BERT-for-RRC-ABSA">code</a>]</small>						
 						</li>
 
 						<li><strong>Open-world Learning and Application to Product Classification</strong><br>
-							Hu Xu, Bing Liu, <b>Lei Shu</b>, P. Yu<br>
-						WWW 2019 <small>[<a href="https://arxiv.org/abs/1809.06004">arXiv</a>][<a href="https://github.com/howardhsu/Meta-Open-World-Learning">code</a>]</small>
+						Hu Xu, Bing Liu, <b>Lei Shu</b>, P. Yu<br>
+						<em>WWW 2019</em> <small>[<a href="https://arxiv.org/abs/1809.06004">arXiv</a>][<a href="https://github.com/howardhsu/Meta-Open-World-Learning">code</a>]</small>
 						</li>
 
 						<li><strong>Incorporating the Structure of the Belief State in End-to-End Task-Oriented Dialogue Systems</strong><br>
-							<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Bing Liu, Hu Xu, Huaixiu Zheng, Gokhan Tur<br>
-						NeurIPS 2018 Conversational AI Workshop <small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>]<!--[<a href="">bib</a>]--></small>
+						<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Bing Liu, Hu Xu, Huaixiu Zheng, Gokhan Tur<br>
+						<em>NeurIPS 2018 Conversational AI Workshop</em> <small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>]<!--[<a href="">bib</a>]--></small>
 						</li>
 
 						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong><br>
-							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						ACL 2018 <small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://www.cs.uic.edu/~hxu/acl2018_bib.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
+						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
+						<em>ACL 2018</em> <small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://www.cs.uic.edu/~hxu/acl2018_bib.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Domain Word Embedding via Meta-Learning</strong><br>
-							Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						IJCAI 2018 <small>[<a href="https://www.ijcai.org/proceedings/2018/0627.pdf">paper</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai_final.pdf">slides</a>][<a href="https://github.com/howardhsu/L-DEM">code</a>]</small>
+						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
+						<em>IJCAI 2018</em> <small>[<a href="https://www.ijcai.org/proceedings/2018/0627.pdf">paper</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/ijcai_final.pdf">slides</a>][<a href="https://github.com/howardhsu/L-DEM">code</a>]</small>
 						</li>
 
 						<li><strong>Dual Attention Network for Product Compatibility and Function Satisfiability Analysis</strong><br>
-							Hu Xu, Sihong Xie, <b>Lei Shu</b>, Philip S. Yu<br>
-						AAAI 2018 <small>[<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17294/16169">paper</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_slides.pdf">slides</a>][<a href="https://www.cs.uic.edu/~hxu/QA_dataset.html">dataset</a>]</small>
+						Hu Xu, Sihong Xie, <b>Lei Shu</b>, Philip S. Yu<br>
+						<em>AAAI 2018</em> <small>[<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17294/16169">paper</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_bib.bib">bib</a>][<a href="https://www.cs.uic.edu/~hxu/aaai2018_slides.pdf">slides</a>][<a href="https://www.cs.uic.edu/~hxu/QA_dataset.html">dataset</a>]</small>
 						</li>
 
 						<li><strong>Unseen Class Discovery in Open-world Classification</strong><br>
-							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
+						<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
 						<small>[<a href="https://arxiv.org/abs/1801.05609">arXiv</a>][<a href="">bib</a>]</small>
 						</li>
 
 						<li><strong>DOC: Deep Open Classification of Text Documents</strong><br>
-							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						EMNLP 2017 <small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
+						<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
+						<em>EMNLP 2017</em> <small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Learning CRF for Supervised Aspect Extraction</strong><br>
-							<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						ACL 2017 <small>[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/234956125">video</a>]</small>
+						<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
+						<em>ACL 2017</em> <small>[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/234956125">video</a>]</small>
 						</li>
 
 						<li><strong>Lifelong-RL: Lifelong Relaxation Labeling for Separating Entities and Aspects in Opinion Targets</strong><br>
-							<b>Lei Shu</b>, Bing Liu, Hu Xu, Annice Kim<br>
-						EMNLP 2016 <small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
+						<b>Lei Shu</b>, Bing Liu, Hu Xu, Annice Kim<br>
+						<em>EMNLP 2016</em> <small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
 						</li>
 						<!--
 						<li><strong></strong><br>
@@ -109,7 +108,7 @@
 						<small>[<a href="">paper</a>]</small>
 						</li>
 						-->
-					</ul>
+					</ol>
 				</div>
 			</section>
 
