--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Lei Shu's homepage</title>
+		<title>Lei Shu (UIC) - Homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,8 +14,8 @@
 				<div class="inner">
 					<!--<span class="icon major fa-cloud"></span>-->
 					<img class="img-circle" src = "images/emoji.png" alt = "Lei Shu's emoji" />
-					<h1><b>Lei Shu</b></h1>
-					<dt><b>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning, Reinforcement Learning</b></dt>
+					<h1>Lei Shu</h1>
+					<h5>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning, Reinforcement Learning</h5>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
