--- a/index.html
+++ b/index.html
@@ -41,15 +41,11 @@
 		<!-- Four -->
 			<section id="two" class="main style2">
 				<div class="container" >
-					<header>
-						<h2>About Me</h2>
-					</header>
+					<h2>About Me</h2>		
 					<p>I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
 					<!--My research interests are dialogue system, sentiment analysis, and deep learning. -->
 					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. <!--My latest resume is here.--> <p>
-					<header>
-						<h3><b>Selected Papers</b> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</h5>
-					</header>
+					<h3><b>Selected Papers</b> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</h5>
 					<ol >
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
 							</strong><br>
@@ -69,7 +65,7 @@
 
 						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong><br>
 						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						<em>ACL 2018</em> <small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://www.cs.uic.edu/~hxu/acl2018_bib.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
+						<em>ACL 2018</em> <small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://aclweb.org/anthology/papers/P/P18/P18-2094.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Domain Word Embedding via Meta-Learning</strong><br>
@@ -84,22 +80,22 @@
 
 						<li><strong>Unseen Class Discovery in Open-world Classification</strong><br>
 						<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<small>[<a href="https://arxiv.org/abs/1801.05609">arXiv</a>][<a href="">bib</a>]</small>
+						<small>[<a href="https://arxiv.org/abs/1801.05609">arXiv</a>]<!--[<a href="">bib</a>]--></small>
 						</li>
 
 						<li><strong>DOC: Deep Open Classification of Text Documents</strong><br>
 						<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<em>EMNLP 2017</em> <small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
+						<em>EMNLP 2017</em> <small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="https://aclweb.org/anthology/papers/D/D17/D17-1314.bib">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Learning CRF for Supervised Aspect Extraction</strong><br>
 						<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<em>ACL 2017</em> <small>[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/234956125">video</a>]</small>
+						<em>ACL 2017</em> <small>[<a href="https://www.aclweb.org/anthology/P17-2023">paper</a>][<a href="https://aclweb.org/anthology/papers/P/P17/P17-2023.bib">bib</a>][<a href="https://vimeo.com/234956125">video</a>]</small>
 						</li>
 
 						<li><strong>Lifelong-RL: Lifelong Relaxation Labeling for Separating Entities and Aspects in Opinion Targets</strong><br>
 						<b>Lei Shu</b>, Bing Liu, Hu Xu, Annice Kim<br>
-						<em>EMNLP 2016</em> <small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
+						<em>EMNLP 2016</em> <small>[<a href="https://www.aclweb.org/anthology/D16-1022">paper</a>][<a href="https://aclweb.org/anthology/papers/D/D16/D16-1022.bib">bib</a>][<a href="https://vimeo.com/239244227">video</a>]</small>
 						</li>
 						<!--
 						<li><strong></strong><br>
