--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 		<!-- Four -->
 			<section id="two" class="main style2">
 				<div class="container" >
-					<h2>About Me</h2>		
-					<p>I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
+					<h2 style="display:inline; color:#AA6EEA">About Me</h2>	
+					<p style="color:#D7BDE2;fontsize:15">I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
 					<!--My research interests are dialogue system, sentiment analysis, and deep learning. -->
-					I am expected to graduate by the end of 2019 and currently <b>on the job market</b>. <!--My latest resume is here.--> <p>
-					<h3 style="display:inline">Selected Papers</h3><p style="display:inline"> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</p>		
+					I am expected to graduate by the end of 2019 and currently on the job market. <!--My latest resume is here.--> <p>
+					<h4 style="display:inline">Selected Papers</h4><p style="display:inline"> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</p>		
 					<ol >
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
 							</strong><br>
