--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<!-- Four -->
 			<section id="two" class="main style2">
 				<div class="container" >
-					<h2 style="display:inline; color:#AA6EEA">About Me </h2>	
+					<h2 style="display:inline; color:#5F50F3">About Me </h2>	
 					<p style="display:inline;color:#FDFEFE">I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
 					<!--My research interests are dialogue system, sentiment analysis, and deep learning. -->
 					I am expected to graduate by the end of 2019 and currently on the job market. <!--My latest resume is here.--> <p>
