--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Lei Shu (UIC) - Homepage</title>
+		<title>Lei Shu (舒蕾) - Homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -42,7 +42,7 @@
 			<section id="two" class="main style2">
 				<div class="container" >
 					<h2 style="display:inline; color:#5F50F3">Hello, </h2>	
-					<p style="display:inline;color:#FDFEFE">I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
+					<p style="display:inline;color:#FDFEFE">my name is 舒蕾. I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
 					<!--My research interests are dialogue system, sentiment analysis, and deep learning. -->
 					I am expected to graduate by the end of 2019 and currently on the job market. <!--My latest resume is here.--> <p>
 					<hr>
