--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
 							</strong><br>
 						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						<em>NAACL 2019</em> <small>[<a href="https://arxiv.org/abs/1904.02232">arXiv</a>][<a href="https://github.com/howardhsu/BERT-for-RRC-ABSA">code</a>]</small>						
+						<em>NAACL 2019</em> <small>[<a href="https://arxiv.org/abs/1904.02232">preprint</a>][<a href="https://github.com/howardhsu/BERT-for-RRC-ABSA">code</a>]</small>						
 						</li>
 
 						<li><strong>Open-world Learning and Application to Product Classification</strong><br>
 						Hu Xu, Bing Liu, <b>Lei Shu</b>, P. Yu<br>
-						<em>WWW 2019</em> <small>[<a href="https://arxiv.org/abs/1809.06004">arXiv</a>][<a href="https://github.com/howardhsu/Meta-Open-World-Learning">code</a>]</small>
+						<em>WWW 2019</em> <small>[<a href="https://arxiv.org/abs/1809.06004">preprint</a>][<a href="https://github.com/howardhsu/Meta-Open-World-Learning">code</a>]</small>
 						</li>
 
 						<li><strong>Incorporating the Structure of the Belief State in End-to-End Task-Oriented Dialogue Systems</strong><br>
@@ -66,7 +66,7 @@
 
 						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong><br>
 						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
-						<em>ACL 2018</em> <small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://aclweb.org/anthology/papers/P/P18/P18-2094.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
+						<em>ACL 2018</em> <small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://aclweb.org/anthology/papers/P/P18/P18-2094.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">in-domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Domain Word Embedding via Meta-Learning</strong><br>
@@ -81,7 +81,7 @@
 
 						<li><strong>Unseen Class Discovery in Open-world Classification</strong><br>
 						<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<small>[<a href="https://arxiv.org/abs/1801.05609">arXiv</a>]<!--[<a href="">bib</a>]--></small>
+						<small>[<a href="https://arxiv.org/abs/1801.05609">preprint</a>]<!--[<a href="">bib</a>]--></small>
 						</li>
 
 						<li><strong>DOC: Deep Open Classification of Text Documents</strong><br>
