--- a/index.html
+++ b/index.html
@@ -29,17 +29,8 @@
 					-->
 				</div>
 			</section>
-
-		<!-- One
-			<section id="one" class="main style1">
-				<div class="container" >	
-			
-					</div>
-				</div>
-			</section>
- 		-->
-		<!-- Four -->
-			<section id="two" class="main style2">
+			<section id="one" class="main style2">
+				<div class="align-left">
 				<div class="container" >
 					<h2 style="display:inline; color:#5F50F3">Hello, </h2>	
 					<p style="display:inline;color:#FDFEFE">my name is 舒蕾. I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision.
@@ -105,7 +96,7 @@
 						<small>[<a href="">paper</a>]</small>
 						</li>
 						-->
-					</ol>
+				</div>	</ol>
 				</div>
 			</section>
 
