--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<!--<span class="icon major fa-cloud"></span>-->
 					<img class="img-circle" src = "images/emoji.png" alt = "Lei Shu's emoji" />
 					<h1>Lei Shu</h1>
-					<h5>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning, Reinforcement Learning</h5>
+					<h5>Dialogue System, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning</h5>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
@@ -96,7 +96,15 @@
 						<small>[<a href="">paper</a>]</small>
 						</li>
 						-->
-				</div>	</ol>
+						</ol>
+						<hr>
+						<h3 style="display:inline">Professional Services</h3>	
+						<ul>							
+							<li><em><strong>PC member</strong></em> for ACL 2019 (Machine Learning and Generation), AAAI 2018</li>
+							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
+							<li><em><strong>Invited Reviewer</strong></em> of IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
+						</ul>
+				</div>	
 				</div>
 			</section>
 
