--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 						<li><strong>DOC: Deep Open Classification of Text Documents</strong><br>
 						<b>Lei Shu</b>, Hu Xu, Bing Liu<br>
-						<em>EMNLP 2017</em> <small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="https://aclweb.org/anthology/papers/D/D17/D17-1314.bib">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>]</small>
+						<em>EMNLP 2017</em> <small>[<a href="https://www.aclweb.org/anthology/D17-1314">paper</a>][<a href="https://aclweb.org/anthology/papers/D/D17/D17-1314.bib">bib</a>][<a href="https://www.youtube.com/watch?v=g8sRvZNwkbE">video</a>][<a href="https://drive.google.com/file/d/1Kgtqbp0B67S-f4W7ULfG-_YP2kOdZ-Do/view?usp=sharing">dataset</a>][<a href="https://github.com/leishu02/EMNLP2017_DOC">code</a>]</small>
 						</li>
 
 						<li><strong>Lifelong Learning CRF for Supervised Aspect Extraction</strong><br>
