--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<hr>
 						<h3 style="display:inline">Professional Services</h3>	
 						<ul>							
-							<li><em><strong>PC member</strong></em> for ACL 2019 (Machine Learning and Generation), AAAI 2018</li>
+							<li><em><strong>PC member</strong></em> for ACL 2019 (Machine Learning and Generation), EMNLP 2019 (IR), AAAI 2018</li>
 							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
 							<li><em><strong>Invited Reviewer</strong></em> of IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
 						</ul>
