--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
 						-->
 						</ol>
 						<hr>
+						<h3 style="display:inline">Awards</h3>	
+						<ul>							
+							<li><strong><em>Grand Prize Winner</em></strong> of Yelp Dataset Challenge Round 12 </li>
+						</ul>
 						<h3 style="display:inline">Professional Services</h3>	
 						<ul>							
 							<li><em><strong>PC member</strong></em> for ACL 2019 (Machine Learning and Generation), EMNLP 2019 (IR), AAAI 2018</li>
