--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 					<hr>
 					<h3 style="display:inline">Selected Papers</h3><p style="display:inline"> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</p>		
 					<ol >
+						<li><strong>Flexibly-Structured Model for Task-Oriented Dialogues.</strong><br>
+						<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Hu Xu, Bing Liu, Huaixiu Zheng, Gokhan Tur<br>
+						<em>SIGDIAL 2019</em> <!--<small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>][<a href="">bib</a>]</small>-->
+						</li>
+						
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
 							</strong><br>
 						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
