--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<ol >
 						<li><strong>Flexibly-Structured Model for Task-Oriented Dialogues.</strong><br>
 						<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Hu Xu, Bing Liu, Huaixiu Zheng, Gokhan Tur<br>
-						<em>SIGDIAL 2019</em> <!--<small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>][<a href="">bib</a>]</small>-->
+						<em>SIGDIAL 2019</em> <small>[<a href="coming soon">paper</a>][<a href="coming soon">code</a>]</small>
 						</li>
 						
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
