--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<hr>
 					<h3 style="display:inline">Selected Papers</h3><p style="display:inline"> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</p>		
 					<ol >
-						<li><strong>Flexibly-Structured Model for Task-Oriented Dialogues.</strong><br>
+						<li><strong>Flexibly-Structured Model for Task-Oriented Dialogues</strong><br>
 						<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Hu Xu, Bing Liu, Huaixiu Zheng, Gokhan Tur<br>
 						<em>SIGDIAL 2019</em> <small>[paper][code]</small>
 						</li>
