--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 				<div class="align-left">
 				<div class="container" >
 					<h2 style="display:inline; color:#6666ff">Hello:) </h2>	
-					<p style="display:inline;color:#FDFEFE">my name is 舒蕾. I am a 5th year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. I have broad interests in natural language processing and machine learning. I collaborate with <a href="http://w4nderlu.st/about">Dr. Piero Molino</a> and <a href="https://scholar.google.com/citations?user=8XSlAp4AAAAJ&hl=en">Dr. Gokhan Tur</a> from <a href="https://www.uber.com/us/en/uberai/">Uber AI Labs</a> on Conversational AI research. I closely work with <a href="https://howardhsu.github.io/">Hu Xu</a> on representation learning, open-world learning and meta learning.
+					<p style="display:inline;color:#FDFEFE">my name is 舒蕾. I am a last-year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. I have broad interests in natural language processing and machine learning. I collaborate with <a href="http://w4nderlu.st/about">Dr. Piero Molino</a> and <a href="https://scholar.google.com/citations?user=8XSlAp4AAAAJ&hl=en">Dr. Gokhan Tur</a> from <a href="https://www.uber.com/us/en/uberai/">Uber AI Labs</a> on Conversational AI research. I closely work with <a href="https://howardhsu.github.io/">Hu Xu</a> on representation learning, open-world learning and meta learning.
 					I am expected to graduate at May 2020 and currently on the job market. <a href="https://leishu02.github.io/LeiShu_CV.pdf">My latest resume is here.</a>
 					<hr>
 					<h3 style="display:inline">Selected Papers</h3><p style="display:inline"> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</p>		
 					<ol >
 						<li><strong>Flexibly-Structured Model for Task-Oriented Dialogues</strong><br>
 						<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Hu Xu, Bing Liu, Huaixiu Zheng, Gokhan Tur<br>
-						<em>SIGDIAL 2019</em> <small>[paper][code]</small>
+						<em>SIGDIAL 2019</em> <small>[paper][bib]<a href="https://leishu02.github.io/FSDM_SIGDIAL2019.pdf">[slides][code]</small>
 						</li>
 						
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
