--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<ol >
 						<li><strong>Flexibly-Structured Model for Task-Oriented Dialogues</strong><br>
 						<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Hu Xu, Bing Liu, Huaixiu Zheng, Gokhan Tur<br>
-						<em>SIGDIAL 2019</em> <small>[paper][bib]<a href="https://leishu02.github.io/FSDM_SIGDIAL2019.pdf">[slides]</a><a href="https://github.com/uber-research/FSDM/">[code]</a></small>
+							<em>SIGDIAL 2019</em> <small><a href="http://arxiv.org/abs/1908.02402">[preprint]</a>[bib]<a href="https://leishu02.github.io/FSDM_SIGDIAL2019.pdf">[slides]</a><a href="https://github.com/uber-research/FSDM/">[code]</a></small>
 						</li>
 						
 						<li><strong>BERT Post-Training for Review Reading Comprehension and Aspect-based Sentiment Analysis
