--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<section id="header">
 				<div class="inner">
 					<!--<span class="icon major fa-cloud"></span>-->
-					<img class="img-circle" src = "images/IMG_0530.JPG" alt = "Lei Shu's pic" />
+					<img class="img-round" src = "images/IMG_0530.JPG" alt = "Lei Shu's pic" />
 					<h1>Lei Shu</h1>
 					<h5>Conversational AI, Sentiment Analysis, Deep Learning, Meta Learning, Lifelong Learning</h5>
 					<ul class="icons">
