--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 					<hr>
 					<h3 style="display:inline">Selected Papers</h3><p style="display:inline"> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</p>		
 					<ol >
+						<li><strong>Modeling Multi-Action Policy for Task-Oriented Dialogues</strong><br>
+						<b>Lei Shu</b>, Hu Xu, Bing Liu, Piero Molino<br>
+						<b>Special Thanks go to Gokhan Tur and Alexandros Papangelis<br>
+						<em>EMNLP 2019</em> <small>[preprint][bib][code]</small>
+						</li>
+						
 						<li><strong>Flexibly-Structured Model for Task-Oriented Dialogues</strong><br>
 						<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Hu Xu, Bing Liu, Huaixiu Zheng, Gokhan Tur<br>
 							<em>SIGDIAL 2019</em> <small><a href="http://arxiv.org/abs/1908.02402">[preprint]</a>[bib]<a href="https://leishu02.github.io/FSDM_SIGDIAL2019.pdf">[slides]</a><a href="https://github.com/uber-research/FSDM/">[code]</a></small>
