--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<ol >
 						<li><strong>Modeling Multi-Action Policy for Task-Oriented Dialogues</strong><br>
 						<b>Lei Shu</b>, Hu Xu, Bing Liu, Piero Molino<br>
-						<b>Special Thanks go to Gokhan Tur and Alexandros Papangelis<br>
+						Special Thanks go to Gokhan Tur and Alexandros Papangelis<br>
 						<em>EMNLP 2019</em> <small>[preprint][bib][code]</small>
 						</li>
 						
