--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 					<h3 style="display:inline">Selected Papers</h3><p style="display:inline"> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</p>		
 					<ol >
 						<li><strong>Modeling Multi-Action Policy for Task-Oriented Dialogues</strong><br>
-						<b>Lei Shu</b>, Hu Xu, Bing Liu, Piero Molino<br>
-						Special Thanks go to Gokhan Tur and Alexandros Papangelis<br>
+						<b>Lei Shu</b>, Hu Xu, Bing Liu, Piero Molino (Special Thanks go to Gokhan Tur and Alexandros Papangelis)<br>
+						
 						<em>EMNLP 2019</em> <small>[preprint][bib][code]</small>
 						</li>
 						
