--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 						<li><strong>Incorporating the Structure of the Belief State in End-to-End Task-Oriented Dialogue Systems</strong><br>
 						<b>Lei Shu</b>, Piero Molino, Mahdi Namazifar, Bing Liu, Hu Xu, Huaixiu Zheng, Gokhan Tur<br>
-						<em>NeurIPS 2018 Conversational AI Workshop</em> <small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>]<!--[<a href="">bib</a>]--></small>
+						<em>NeurIPS 2018 Conversational AI Workshop</em> <small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>][<a href="https://raw.githubusercontent.com/leishu02/leishu02.github.io/master/bibs/nips2018_workshop.bib">bib</a>]</small>
 						</li>
 
 						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong><br>
