--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
 						<li><a href="https://www.youtube.com/channel/UCbIYHHiFF0JNPTbVT5YsnZQ?view_as=subscriber" class="icon alt fa-youtube"><span class="label">Youtube</span></a></li>
 						<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="mailto: lshu3@uic.edu" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto: shulindt@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<!--
 					<ul class="actions special">
