--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 						<em>NeurIPS 2018 Conversational AI Workshop</em> <small>[<a href="http://alborz-geramifard.com/workshops/nips18-Conversational-AI/Papers/18convai-Incorporating%20the%20Structure.pdf">paper</a>][<a href="https://raw.githubusercontent.com/leishu02/leishu02.github.io/master/bibs/nips2018_workshop.bib">bib</a>]</small>
 						</li>
 
-						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong><br>
+						<li><strong>Double Embeddings and CNN-based Sequence Labeling for Aspect Extraction</strong> <br>
+						<font color="#FBA77F">(Yelp Dataset Challenge Round 12 Grand Prize award)</font> <br>
 						Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S. Yu<br>
 						<em>ACL 2018</em> <small>[<a href="https://aclweb.org/anthology/P18-2094">paper</a>][<a href="https://aclweb.org/anthology/papers/P/P18/P18-2094.bib">bib</a>][<a href="https://drive.google.com/file/d/12Pj5LkKnE_XQKIRABiviqgspA5DB1Zfn/view">in-domain embedding</a>][<a href="https://github.com/howardhsu/DE-CNN">code</a>]</small>
 						</li>
@@ -111,11 +112,11 @@
 						<hr>
 						<h3 style="display:inline">Awards</h3>	
 						<ul>							
-							<li><strong><em>Grand Prize Winner</em></strong> of Yelp Dataset Challenge Round 12 </li>
+							<li><strong><em>Grand Prize Winner</em></strong> of <a href="https://www.yelp.com/dataset/challenge/winners">Yelp Dataset Challenge Round 12</a> </li>
 						</ul>
 						<h3 style="display:inline">Professional Services</h3>	
 						<ul>							
-							<li><em><strong>PC member</strong></em> for ACL 2019 (Machine Learning and Generation), EMNLP 2019 (IR), INLG 2019, AAAI 2018</li>
+							<li><em><strong>PC member</strong></em> for ACL 2019 (Machine Learning and Generation), EMNLP 2019 (IR), INLG 2019, AAAI 2020 and 2018</li>
 							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
 							<li><em><strong>Invited Reviewer</strong></em> of IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
 						</ul>
