--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="container" >
 					<h2 style="display:inline; color:#6666ff">Hello:) </h2>	
 					<p style="display:inline;color:#FDFEFE">my name is 舒蕾. I am a last-year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. I have broad interests in natural language processing and machine learning. I collaborate with <a href="http://w4nderlu.st/about">Dr. Piero Molino</a> and <a href="https://scholar.google.com/citations?user=8XSlAp4AAAAJ&hl=en">Dr. Gokhan Tur</a> from <a href="https://www.uber.com/us/en/uberai/">Uber AI Labs</a> on Conversational AI research. I closely work with <a href="https://howardhsu.github.io/">Hu Xu</a> on representation learning, open-world learning and meta learning.
-					I am expected to graduate at May 2020 and currently on the job market. <a href="https://leishu02.github.io/pdfs/LeiShu_CV.pdf">My latest resume is here.</a>
+					<a href="https://leishu02.github.io/pdfs/LeiShu_CV.pdf">My resume is here.</a>
 					<hr>
 					<h3 style="display:inline;color:#F39C12">News</h3>
 						<li>My thesis proposal <strong>Deep Generation in Task-oriented Dialogue System</strong> <small>[<a href="https://leishu02.github.io/pdfs/deepgeneration.pdf">slides</a>]</small><br>
@@ -125,7 +125,7 @@
 						<ul>							
 							<li><em><strong>PC member</strong></em> for ACL 2019 (Machine Learning and Generation), EMNLP 2019 (IR), INLG 2019, AAAI 2020 and 2018</li>
 							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
-							<li><em><strong>Invited Reviewer</strong></em> of IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
+							<li><em><strong>Invited Reviewer</strong></em> of IEEE Access, IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
 						</ul>
 				</div>	
 				</div>
