--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						</ul>
 						<h3 style="display:inline">Professional Services</h3>	
 						<ul>							
-							<li><em><strong>PC member</strong></em> for ACL 2019 (Machine Learning and Generation), EMNLP 2019 (IR), INLG 2019, AAAI 2020 and 2018</li>
+							<li><em><strong>PC member</strong></em> for ACL 2020 (Dialogue and Interactive Systems) 2019 (Machine Learning and Generation), EMNLP 2019 (IR), INLG 2019, AAAI 2020 and 2018</li>
 							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
 							<li><em><strong>Invited Reviewer</strong></em> of IEEE Access, IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
 						</ul>
@@ -140,7 +140,7 @@
 					<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
 					<li><a href="https://www.youtube.com/channel/UCbIYHHiFF0JNPTbVT5YsnZQ?view_as=subscriber" class="icon alt fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto: lshu3@uic.edu" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto: shulindt@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<!--<dd> Email: lshu3@uic.edu </dd>-->
 				<ul class="copyright">
