--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 				<div class="align-left">
 				<div class="container" >
 					<h2 style="display:inline; color:#6666ff">Hello:) </h2>	
-					<p style="display:inline;color:#FDFEFE">my name is 舒蕾. I am a last-year Ph.D. student in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. I have broad interests in natural language processing and machine learning. I collaborate with <a href="http://w4nderlu.st/about">Dr. Piero Molino</a> and <a href="https://scholar.google.com/citations?user=8XSlAp4AAAAJ&hl=en">Dr. Gokhan Tur</a> from <a href="https://www.uber.com/us/en/uberai/">Uber AI Labs</a> on Conversational AI research. I closely work with <a href="https://howardhsu.github.io/">Hu Xu</a> on representation learning, open-world learning and meta learning.
-					<a href="https://leishu02.github.io/pdfs/LeiShu_CV.pdf">My resume is here.</a>
+					<p style="display:inline;color:#FDFEFE">my name is 舒蕾. I received my Ph.D. in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. I have broad interests in natural language processing and machine learning. I collaborate with <a href="http://w4nderlu.st/about">Dr. Piero Molino</a> (<a href="https://www.uber.com/us/en/uberai/">Uber AI Labs</a>) and <a href="https://scholar.google.com/citations?user=8XSlAp4AAAAJ&hl=en">Dr. Gokhan Tur</a> (Amazon Alexa AI)  on Conversational AI research. I closely work with <a href="https://howardhsu.github.io/">Hu Xu</a> on representation learning, open-world learning and meta learning.
 					<hr>
 					<h3 style="display:inline;color:#F39C12">News</h3>
 						<li>My thesis proposal <strong>Deep Generation in Task-oriented Dialogue System</strong> <small>[<a href="https://leishu02.github.io/pdfs/deepgeneration.pdf">slides</a>]</small><br>
@@ -123,9 +122,9 @@
 						</ul>
 						<h3 style="display:inline">Professional Services</h3>	
 						<ul>							
-							<li><em><strong>PC member</strong></em> for ACL 2020 (Dialogue and Interactive Systems) 2019 (Machine Learning and Generation), EMNLP 2019 (IR), INLG 2019, AAAI 2020 and 2018</li>
+							<li><em><strong>PC member</strong></em> for ACL 2020 (Demo; Dialogue and Interactive Systems) 2019 (Machine Learning; Generation), EMNLP 2019 (IR), COLING 2020 (Dialogue Interactive Systems), INLG 2019, AAAI 2020 and 2018</li>
 							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
-							<li><em><strong>Invited Reviewer</strong></em> of IEEE Access, IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
+							<li><em><strong>Invited Reviewer</strong></em> of IEEE Transactions on Affective Computing, IEEE Access, IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
 						</ul>
 				</div>	
 				</div>
@@ -142,7 +141,7 @@
 					<li><a href="https://github.com/leishu02" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto: shulindt@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
-				<!--<dd> Email: lshu3@uic.edu </dd>-->
+				<!--<dd> Email: shulindt@gmail.com </dd>-->
 				<ul class="copyright">
 					<li>&copy; Lei Shu</li><li>Design: HTML5 UP</li>
 				</ul>
