--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						</ul>
 						<h3 style="display:inline">Professional Services</h3>	
 						<ul>							
-							<li><em><strong>PC member</strong></em> for ACL 2020 (Demo; Dialogue and Interactive Systems) 2019 (Machine Learning; Generation), EMNLP 2019 (IR), COLING 2020 (Dialogue and Interactive Systems), INLG 2019, AAAI 2020 and 2018</li>
+							<li><em><strong>PC member</strong></em> for ACL 2020 (Demo; Dialogue and Interactive Systems) 2019 (Machine Learning; Generation), EMNLP 2020 2019 (IR), COLING 2020 (Dialogue and Interactive Systems), AACL 2020, INLG 2019, AAAI 2020 and 2018</li>
 							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
 							<li><em><strong>Invited Reviewer</strong></em> of IEEE Transactions on Affective Computing, IEEE Access, IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
 						</ul>
