--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<li><strong>DomBERT: Domain-oriented Language Model for Aspect-based Sentiment Analysis</strong><br>
 						 Hu Xu, Bing Liu, <b>Lei Shu</b>, Philip S Yu<br>
 						
-						<em>arXiv 2020</em>
+						<em>EMNLP Findings 2020</em>
 
 <small>[<a href="https://arxiv.org/abs/2004.13816">preprint</a>]</small>
 <!--[<a href="https://raw.githubusercontent.com/leishu02/leishu02.github.io/master/bibs/emnlp2019_gCAS.bib">bib</a>][<a href="https://github.com/leishu02/EMNLP2019_gCAS">code</a>][<a href="https://leishu02.github.io/pdfs/gCAS_poster.pdf">poster</a>]
@@ -151,7 +151,7 @@
 						</ul>
 						<h3 style="display:inline">Professional Services</h3>	
 						<ul>							
-							<li><em><strong>PC member</strong></em> for ACL 2020 (Demo; Dialogue and Interactive Systems) 2019 (Machine Learning; Generation), EMNLP 2020 2019 (IR), COLING 2020 (Dialogue and Interactive Systems), AACL 2020, INLG 2019, AAAI 2020 and 2018</li>
+							<li><em><strong>PC member</strong></em> for ACL 2020 (Demo; Dialogue and Interactive Systems) 2019 (Machine Learning; Generation), EMNLP 2020 2019 (IR), COLING 2020 (Dialogue and Interactive Systems), AACL 2020, INLG 2019, 2020 AAAI 2021, 2020, 2018</li>
 							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
 							<li><em><strong>Invited Reviewer</strong></em> of IEEE Transactions on Affective Computing, IEEE Access, IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
 						</ul>
