--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 					<p style="display:inline;color:#FDFEFE">my name is 舒蕾. I am an <b> Applied Scientist</b> at <b style="color:#2DE1F9"><a href="https://www.amazon.science/tag/alexa">Amazon Alexa AI</a></b>. Previously, I received my Ph.D. in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. I work with my advisor on sentiment analysis and lifelong learning. I also collaborate with <a href="http://w4nderlu.st/about">Dr. Piero Molino</a> (Stanford University) and <a href="https://scholar.google.com/citations?user=8XSlAp4AAAAJ&hl=en">Dr. Gokhan Tur</a> (Amazon Alexa AI)  on Conversational AI, NLU/NLG research. I closely work with <a href="https://howardhsu.github.io/">Hu Xu</a> (FAIR) on representation learning (language modeling, word embedding), open-world learning, meta learning and question answering.</p><hr>
 					
 						<h2 style="display:inline;color: #76D7C4">News</h2>
-						<li>My thesis proposal <strong>Deep Generation in Task-oriented Dialogue System</strong> <small>[<a href="https://leishu02.github.io/pdfs/deepgeneration.pdf">slides</a>]</small><br>
+						<ul style="list-style-type:circle; line-height:200%;">
+						<li>My thesis proposal <strong>Deep Generation in Task-oriented Dialogue System</strong> <small>[<a href="https://leishu02.github.io/pdfs/deepgeneration.pdf">slides</a>]</small>
 						
 						</li>
+						</ul>
 
 					<hr>
 					<h2 style="display:inline; color: #76D7C4">Selected Papers</h3><p style="display:inline"> (<a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en">full list at Google Scholar</a>)</p>	
@@ -182,11 +184,12 @@
 						</ul>
 						<hr>
 						<h2 style="display:inline; color: #76D7C4">Awards</h2>	
-						<ul>							
+						<ul style="list-style-type:circle; line-height:200%;">							
 							<li><strong><em>Grand Prize Winner</em></strong> of <a href="https://www.yelp.com/dataset/challenge/winners">Yelp Dataset Challenge Round 12</a> </li>
 						</ul>
+						<hr>
 						<h2 style="display:inline; color: #76D7C4">Professional Services</h2>	
-						<ul>							
+						<ul style="list-style-type:circle; line-height:200%;">							
 							<li><em><strong>PC member</strong></em> for ACL 2020 (Demo; Dialogue and Interactive Systems) 2019 (Machine Learning; Generation), EMNLP 2020 2019 (IR), COLING 2020 (Dialogue and Interactive Systems), AACL 2020, INLG 2020, 2019, SLT 2021, AAAI 2021, 2020, 2018</li>
 							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
 							<li><em><strong>Invited Reviewer</strong></em> of IEEE Transactions on Affective Computing, IEEE Access, IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
