--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 						<hr>
 						<h2 style="display:inline; color: #76D7C4">Professional Services</h2>	
 						<ul style="list-style-type:circle; line-height:200%;">							
-							<li><em><strong>PC member</strong></em> for ACL 2020 (Demo; Dialogue and Interactive Systems) 2019 (Machine Learning; Generation), EMNLP 2020 2019 (IR), COLING 2020 (Dialogue and Interactive Systems), AACL 2020, INLG 2020, 2019, SLT 2021, AAAI 2021, 2020, 2018</li>
+							<li><em><strong>PC member</strong></em> for ACL 2020 (Demo; Dialogue and Interactive Systems) 2019 (Machine Learning; Generation), EMNLP 2020 2019, NAACL 2021, EACL 2021, AACL 2020, COLING 2020, INLG 2020 2019, SLT 2021, AAAI 2021 2020 2018, NeurIPS 2020 HLDS</li>
 							<li><em><strong>Session Chair</strong></em> for IJCAI 2018</li>
-							<li><em><strong>Invited Reviewer</strong></em> of IEEE Transactions on Affective Computing, IEEE Access, IEEE/ACM Transactions on Audio, Speech, and Language Processing</li>
+							<li><em><strong>Invited Reviewer</strong></em> of IEEE Transactions on Affective Computing, IEEE Access, IEEE/ACM Transactions on Audio, Speech, and Language Processing, Progress in Artificial Intelligence </li>
 						</ul>
 				</div>	
 				</div>
