--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					
 						<h2 style="display:inline;color: #76D7C4">News</h2>
 						<ul style="list-style-type:circle; line-height:200%;">
-						<li>My talk <strong>Open-world Classification</strong> <small>[<a href="https://github.com/leishu02/leishu02.github.io/blob/master/pdfs/OpenWorldClassification.pdf">slides</a>]</small>
+						<li>My talk <strong>Open-world Classification</strong> <small>[<a href="https://leishu02.github.io/pdfs/OpenWorldClassification.pdf">slides</a>]</small>
 						
 						</li>
 
