--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
 -->
 						</li>
 
+<li style="margin-bottom: 1em;"><strong>TaCL: Improving BERT Pre-training with Token-aware Contrastive Learning</strong><br>
+						 Yixuan Su, Fangyu Liu, Zaiqiao Meng, <b>Lei Shu</b>, Ehsan Shareghi, Nigel Collier<br>
+						
+						<em>arXiv:2111.04198</em>
+
+						<small>[<a href="https://arxiv.org/abs/2111.04198">preprint</a>]</small>
+						<!--<small>[<a href="https://raw.githubusercontent.com/leishu02/leishu02.github.io/master/bibs/pptod2021_arxiv.bib">bib</a>]</small>-->
+						<small>[<a href="https://github.com/yxuansu/TaCL">code</a>]</small>
+<!--[<a href="https://leishu02.github.io/pdfs/gCAS_poster.pdf">poster</a>]
+-->
+						</li>
+
+
 <li style="margin-bottom: 1em;"><strong>ODIST: Open World Classification via Distributionally Shifted Instances</strong><br>
 						<b>Lei Shu</b>, Yassine Benajiba, Saab Mansour, Yi Zhang<br>
 						
