--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<!--<span class="icon major fa-cloud"></span>-->
 					<img class="img-circle" src = "images/IMG_0530_small.JPG" alt = "Lei Shu's pic" />
 					<h1>Lei Shu</h1>
-					<h5>Conversational AI, Representation Learning, Open-world Learning, Lifelong Learning, Multiple Modality, Sentiment Analysis</h5>
+					<h5>Conversational AI, Representation Learning, Open-world Learning, Lifelong Learning, Multiple Modality</h5>
 					<ul class="icons">
 						<li><a href="https://scholar.google.com/citations?user=Q0zkC-kAAAAJ&hl=en" class="icon alt fa-google"><span class="label">Google</span></a></li>
 						<li><a href="https://www.linkedin.com/in/lei-shu-8b361642/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>	
@@ -33,7 +33,7 @@
 			<section id="one" class="main style2">
 				<div class="align-left">
 				<div class="container" >
-					<h2 style="display:inline; color: #76D7C4">Welcome :) </h2>	
+					<h2 style="display:inline; color: #76D7C4">Welcome, </h2>	
 					<p style="display:inline;color:#FDFEFE">my name is 舒蕾. I am an <b> Applied Scientist</b> at <b style="color:#FB9710"><a href="https://aws.amazon.com/free/machine-learning/?trk=ps_a134p000004ew2oAAA&trkCampaign=acq_paid_search_brand&sc_channel=PS&sc_campaign=acquisition_US&sc_publisher=Google&sc_category=Machine%20Learning&sc_country=US&sc_geo=NAMER&sc_outcome=acq&sc_detail=aws%20artificial%20intelligence&sc_content=Artificial%20Intelligence_e&sc_matchtype=e&sc_segment=463369380458&sc_medium=ACQ-P|PS-GO|Brand|Desktop|SU|Machine%20Learning|Solution|US|EN|Text&s_kwcid=AL!4422!3!463369380458!e!!g!!aws%20artificial%20intelligence&ef_id=CjwKCAiAsOmABhAwEiwAEBR0ZhNdRHZ6LXHfc4qLVEnXU3xmUm__tnwk8ogiMdR3WESarM6OziFKABoCk4cQAvD_BwE:G:s&s_kwcid=AL!4422!3!463369380458!e!!g!!aws%20artificial%20intelligence">Amazon AWS AI</a></b>. Previously, I worked in <a href="https://www.amazon.science/tag/alexa">Amazon Alexa AI</a>. In 2020, I received my Ph.D. in <a href="https://cs.uic.edu/">Computer Science at University of Illinois at Chicago</a> under <a href="https://www.cs.uic.edu/~liub/">Prof. Bing Liu</a>'s supervision. I work with my advisor on sentiment analysis and lifelong learning. I also collaborate with <a href="http://w4nderlu.st/about">Dr. Piero Molino</a> (Stanford University) and <a href="https://scholar.google.com/citations?user=8XSlAp4AAAAJ&hl=en">Dr. Gokhan Tur</a> (Amazon Alexa AI)  on Conversational AI, NLU/NLG research. I closely work with <a href="https://howardhsu.github.io/">Hu Xu</a> (FAIR) on representation learning (language modeling, word embedding), open-world learning, meta learning and question answering.</p><hr>
 					
 						<h2 style="display:inline;color: #76D7C4">News</h2>
@@ -69,7 +69,7 @@
 
 
 <li style="margin-bottom: 1em;"><strong>TaCL: Improving BERT Pre-training with Token-aware Contrastive Learning</strong><br>
-						 Yixuan Su, Fangyu Liu, Zaiqiao Meng, <b>Lei Shu</b>, Ehsan Shareghi, Nigel Collier<br>
+						 Yixuan Su, Fangyu Liu, Zaiqiao Meng, Tian Lan, <b>Lei Shu</b>, Ehsan Shareghi, Nigel Collier<br>
 						
 						<em>NAACL 2022</em>
 
